--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
+    "express": "^4.17.3",
+    "mysql": "^2.18.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
