--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
