--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.26.7",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "wangeditor": "^4.7.11"
