--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.0",
     "element-ui": "^2.4.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
