--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "mockjs": "^1.1.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "vue": "^2.6.11",
